--- a/wm/sway.org
+++ b/wm/sway.org
@@ -63,11 +63,11 @@ This will lock your screen after 300 seconds of inactivity, then turn off
 your displays after another 300 seconds, and turn your screens back on when
 resumed. It will also lock your screen before your computer goes to sleep.
 #+BEGIN_SRC conf
-exec swayidle -w \
-       timeout 300 'sh ~/.config/swaylock/lock.sh' \
-       timeout 600 'swaymsg "output * dpms off"' \
-            resume 'swaymsg "output * dpms on"' \
-       before-sleep 'sh ~/.config/swaylock/lock.sh'
+#exec swayidle -w \
+#       timeout 300 'sh ~/.config/swaylock/lock.sh' \
+#       timeout 600 'swaymsg "output * dpms off"' \
+#            resume 'swaymsg "output * dpms on"' \
+#       before-sleep 'sh ~/.config/swaylock/lock.sh'
 #+END_SRC
 
 ** Emacs daemon
