--- a/wm/swaylock.org
+++ b/wm/swaylock.org
@@ -20,7 +20,40 @@ indicator-radius=150
 
 ** Colors
 #+BEGIN_SRC conf
+key-hl-color=<<base0C>>
+bs-hl-color=<<base08>>
+#caps-lock-bs-hl-color
+#caps-lock-key-hl-color
 
+inside-color=<<base01>>A0
+inside-clear-color=<<base0C>>
+#inside-caps-lock-color
+inside-ver-color=<<base0D>>
+inside-wrong-color=<<base08>>
+
+layout-bg-color=<<base00>>
+layout-border-color=<<base00>>
+layout-text-color=<<base00>>
+
+line-color=<<base00>>
+line-clear-color=<<base00>>
+line-caps-lock-color=<<base00>>
+line-ver-color=<<base00>>
+line-wrong-color=<<base00>>
+
+ring-color=<<base05>>
+ring-clear-color=<<base0C>>
+#ring-caps-lock-color
+ring-ver-color=<<base0D>>
+ring-wrong-color=<<base08>>
+
+separator-color=<<base00>>
+
+text-color=<<base00>>
+text-clear-color=<<base00>>
+text-caps-lock-color=<<base00>>
+text-ver-color=<<base00>>
+text-wrong-color=<<base00>>
 #+END_SRC
 
 * Script
@@ -37,4 +70,3 @@ convert /tmp/screen.png -scale 4% -scale 4000% -fill black -colorize 50% /tmp/sc
 
 swaylock
 #+END_SRC
-
