Add proper flags to curl

--- a/README.org
+++ b/README.org
@@ -14,6 +14,6 @@ You need only Emacs with =org-mode= and =git=.
 
 * Instalation
 #+BEGIN_SRC sh
-curl -L https://github.com/kuhy/.dotfiles/raw/master/install.sh | sh
+curl -fsSL https://github.com/kuhy/.dotfiles/raw/master/install.sh | sh
 #+END_SRC
 
